--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/stack": "^6.3.5",
     "expo": "~47.0.8",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "i18next": "^22.0.6",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-i18next": "^12.0.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-restart": "^0.0.24",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
